- New entries: Second Static Mouse Pointer (bnc#899610); Live CD
  Installer and Keyboard Settings (bnc#903242); YaST (Qt GUI): "Service
  Manager" Icon Appears Twice (bnc#903243).
- New entry: Missing Dependencies for virt-manager (bnc#901869).
- New entry: Network After an Update With YaST (bnc#895447)

13.2.20141030:
- Update translations.
- Remove misleading skype statement (bnc#902977).
- New entry: openSUSE pre-13.2 cifstab Migration (bnc#902947).

13.2.20141013:
* Resolve some 13.1 check-it markers (bnc#900035).

13.2.1
* Use the openSUSE Stylesheets

13.2.0:
* Start resetting for 13.2 and add CHECKIT markers.

13.1.9 (bnc#851083):
* Update translations.
* Avoid "odd characters" in .txt files (bnc#849449).
* Updated entries: AppArmor and Permission Settings (bnc#850058).
* New entries: AutoYaST (bnc#851588).

13.1.8 (bnc#851083):
* Update translations.

13.1.7 (bnc#850258):
* Updated entries: Adobe Reader (acroread) and Other PDF Readers
  (bnc#849112).
* New entries: Booting When in Secure Boot Mode (bnc#850052), AppArmor
  and Permission Settings (bnc#850058), Skype (bnc#850057), UEFI, GPT,
  and MS-DOS Partitions (bnc#850056), Duplicated Network Interfaces
  (bnc#850054), Garbage on the Screen During Installation with the
  Nouveau Driver (bnc#850053), Locate: Replacing findutils-locate by
  mlocate (bnc#847801).
* Update translations.

13.1.6:
* New entries: Adobe Reader (acroread) and Other PDF Readers
  (bnc#849112), KDE and Bluetooth (bnc#848969).
* Update translations.

13.1.5:
* Resolve 12.3 checkit markers (bnc#847802).
* New entries: Upgrading with Zypper (dup) Requires /etc/fstab
  Cleanup; Samba version 4.1.
* Update translations.

13.1.4:
* Update translations.

13.1.3:
* New entries: Apache 2.4 (bnc#842381); Dropped YaST Modules
  (bnc#843201).
* Updated entries: openSUSE documentation.

13.1.2:
* New entries: Darktable: Refreshing Cache Files Needed (bnc#839661).
* Update translations.

13.1.1: