@@ -156,6 +156,21 @@ systemctl start network.service</screen>
    </para>
   </section>
 
+  <section>
+   <!-- bnc#900954 -->
+   <title>Btrfs and Windows 7</title>
+   <para>
+     If you have Windows XP and you want to install openSUSE 13.2 with
+     Btrfs, and error message in YaST will inform you about problems
+     during the bootloader installation.
+   </para>
+   <para>
+    The safest option is to install in a partition with Ext4 instead
+    of Btrfs.  There is a fix that will reach Factory soon, but will
+    be not present for 13.2.
+   </para>
+  </section>
+
  <section id="general">
   <title>General</title>
   <para/>
